# IGI_253502_ALKHOVIK_2

IGI/: Lab2_docker.fodt  Lab3_py.odt  Lab4.odt
IGI/LR1/: Lab1_git.odt
IGI/LR1/foo/: test.txt
IGI/LR3/: main.py  misc.py  task1.py  task2.py  task3.py  task4.py  task5.py
IGI/LR4/: abstractions.py  main.py  misc.py  phonebook  phonebook.csv  phonebook.pkl  result.txt  source.txt  task1.csv  task1.py  task2.py  task3.py  task4.py  task5.py  task6.ipynb
IGI/LR5/Hotel-Room-Booking-System/HotelApp/hotel/: db.sqlite3
STRWEB/: file.txt
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/: Makefile  pyproject.toml
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/krishna/: models.py
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/krishna/migrations/: 0012_company.py  0017_reservation_has_child.py  0018_tag_news_tags.py  0019_alter_promocode_options_alter_promocode_code_and_more.py  0023_prebook.py  0026_company_address_company_email_company_logo_and_more.py
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/static/css/: custom.css
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/staticfiles/css/: custom.css
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/templates/: basic.html  faq.html  feedback.html  index.html  news.html  news_detail.html  policy.html
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/templates/staff/: add_news.html  add_promo.html  allbookings.html  editroom.html  panel.html  stafflogsign.html
STRWEB/LR2/Hotel-Room-Booking-System/HotelApp/hotel/templates/user/: add_feedback.html
(+45 files in other folders)
