[tool.poetry]
name = "hotel"
version = "0.1.0"
description = ""
authors = ["Alkogolek228 <alkhovik.danila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
django-mathfilters = "^1.0.0"
django-extensions = "^3.2.3"
sympy = "^1.13.2"
pytz = "^2024.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
